add: supplier edit page

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -49,3 +49,19 @@ input {
 .mb-10 {
   margin-bottom: rem(10);
 }
+
+.p-10 {
+  padding: rem(10);
+}
+
+.m-y-10 {
+  margin: rem(10) 0;
+}
+
+.m-x-10 {
+  margin: 0 rem(10);
+}
+
+.fz-14 {
+  font-size: rem(14);
+}
