--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -54,6 +54,18 @@ input {
   padding: rem(10);
 }
 
+.p-x-10 {
+  padding: 0 rem(10);
+}
+
+.p-y-10 {
+  padding: rem(10) 0;
+}
+
+.m-10 {
+  margin: rem(10);
+}
+
 .m-y-10 {
   margin: rem(10) 0;
 }
@@ -64,4 +76,16 @@ input {
 
 .fz-14 {
   font-size: rem(14);
+}
+
+.fz-16 {
+  font-size: rem(16);
+}
+
+.fz-18 {
+  font-size: rem(18);
+}
+
+.fz-20 {
+  font-size: rem(20);
 }
