add: search component to purchase list

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,4 @@
-@import 'https://at.alicdn.com/t/font_2488333_8hp8ss14z8.css';
+@import 'https://at.alicdn.com/t/font_2488333_iwi272vtmn.css';
 
 html,
 body {
@@ -46,6 +46,10 @@ input {
   opacity: .3;
 }
 
+
+.tac {
+  text-align: center;
+}
 
 .mb-10 {
   margin-bottom: rem(10);
